--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,336 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+
+* {
+    padding: 0;
+    margin: 0
+}
+
+.container {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee
+}
+
+.container .card {
+    height: 500px;
+    width: 800px;
+    background-color: #fff;
+    position: relative;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins', sans-serif;
+    overflow: hidden
+}
+
+.container .card .form {
+    width: 100%;
+    height: 100%;
+    display: flex
+}
+
+.container .card .left-side {
+    width: 60%;
+    background-color: #fff;
+    height: 100%
+}
+
+.sign-up {}
+
+.main {
+    display: none
+}
+
+.main_login {
+    display: none
+}
+
+.active {
+    display: block !important
+}
+
+.d-none {
+    display: none
+}
+
+.heading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px
+}
+
+.heading h2 {
+    color: #59B0BD;
+    font-weight: 900
+}
+
+.social {
+    display: flex;
+    justify-content: center
+}
+
+.social span {
+    height: 30px;
+    width: 30px;
+    border: 1px solid black;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 3px;
+    cursor: pointer
+}
+
+.social span i {
+    color: #000;
+    font-size: 15px;
+    text-align: center;
+    margin-top: 3px
+}
+
+.or {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 800
+}
+
+.input-text {
+    padding: 0 40px;
+    margin: 20px 0;
+    position: relative
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    height: 40px;
+    border: none;
+    outline: 0;
+    border: 1px solid #c6d9df;
+    background-color: #f7f8f9;
+    border-radius: 5px
+}
+
+input[type="password"] {
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    height: 40px;
+    border: none;
+    outline: 0;
+    border: 1px solid #c6d9df;
+    background-color: #f7f8f9;
+    border-radius: 5px;
+    padding-right: 30px
+}
+
+input[type="email"] {
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    height: 40px;
+    border: none;
+    outline: 0;
+    border: 1px solid #c6d9df;
+    background-color: #f7f8f9;
+    border-radius: 5px;
+    padding-right: 30px
+}
+
+select {
+    width: 100%;
+    padding: 0 10px;
+    box-sizing: border-box;
+    height: 40px;
+    border: none;
+    outline: 0;
+    border: 1px solid #c6d9df;
+    background-color: #f7f8f9;
+    border-radius: 5px
+}
+
+.fa-eye-slash {
+    position: absolute;
+    top: 13px;
+    right: 50px;
+    cursor: pointer
+}
+
+.fa-eye {
+    position: absolute;
+    top: 13px;
+    right: 50px;
+    cursor: pointer
+}
+
+.terms {
+    position: relative;
+    display: flex;
+    padding-left: 40px
+}
+
+.terms span {
+    margin-right: 5px;
+    margin-top: -2px;
+    height: 20px;
+    width: 20px;
+    background-color: #59B0BD;
+    border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer
+}
+
+.terms span i {
+    color: #fff
+}
+
+.terms p {
+    font-size: 12px;
+    font-weight: 700
+}
+
+.terms p a {
+    color: #59B0BD;
+    text-decoration: none
+}
+
+.buttons {
+    margin-top: 30px;
+    padding: 0 40px;
+    display: flex;
+    gap: 20px
+}
+
+.buttons button {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    outline: 0;
+    font-size: 12px;
+    font-weight: 700;
+    cursor: pointer
+}
+
+.buttons button:nth-child(1) {
+    background-color: #59B0BD;
+    color: #fff
+}
+
+.buttons button:nth-child(2) {
+    background-color: #fff;
+    color: #59B0BD;
+    border: 1px solid #59B0BD
+}
+
+.first {
+    margin-top: 70px
+}
+
+.final-submit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px
+}
+
+.final-submit p {
+    font-size: 14px;
+    font-weight: 800
+}
+
+.warning {
+    border: 1px solid #59B0BD !important
+}
+
+.checkmark__circle {
+    stroke-dasharray: 166;
+    stroke-dashoffset: 166;
+    stroke-width: 2;
+    stroke-miterlimit: 10;
+    stroke: #7ac142;
+    fill: none;
+    animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards
+}
+
+.checkmark {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    display: block;
+    stroke-width: 2;
+    stroke: #fff;
+    stroke-miterlimit: 10;
+    margin: 10% auto;
+    box-shadow: inset 0px 0px 0px #7ac142;
+    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both
+}
+
+.checkmark__check {
+    transform-origin: 50% 50%;
+    stroke-dasharray: 48;
+    stroke-dashoffset: 48;
+    animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards
+}
+
+@keyframes stroke {
+    100% {
+        stroke-dashoffset: 0
+    }
+}
+
+@keyframes scale {
+
+    0%,
+    100% {
+        transform: none
+    }
+
+    50% {
+        transform: scale3d(1.1, 1.1, 1)
+    }
+}
+
+@keyframes fill {
+    100% {
+        box-shadow: inset 0px 0px 0px 30px #7ac142
+    }
+}
+
+.container .card .right-side {
+    width: 40%;
+    background-color: #000;
+    height: 100%
+}
+
+.cover_image {
+    position: relative
+}
+
+.cover_image img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%
+}
+
+@media (max-width:750px) {
+    .container .card {
+        max-width: 350px
+    }
+
+    .container .card .right-side {
+        display: none
+    }
+
+    .container .card .left-side {
+        width: 100%
+    }
+}
